tests/invalid/semantic_scope_violation.c
int outer = 1;
{
    int inner = outer + 2;
}
inner = 5;
